# hs-bitsyntax

./: BitSyntax.cabal
Data/: BitSyntax.hs
