Name:            BitSyntax
Version:         0.3.2.1
License:         BSD3
Author:          Adam Langley
Homepage:        http://www.imperialviolet.org/bitsyntax
Stability:       experimental
Synopsis:        A module to aid in the (de)serialisation of binary data
Build-Depends:   haskell2010, QuickCheck, template-haskell, bytestring
Build-Type:      Simple
Exposed-modules: Data.BitSyntax
Extensions:      ForeignFunctionInterface, CPP, TemplateHaskell
ghc-options:         -Wall -optl-Wl,-s
ghc-prof-options:    -prof -auto-all
